--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "hatm-token-monitor",
+  "name": "hatm-railway-server",
   "version": "1.0.0",
-  "description": "Webhook service for monitoring HATM token transactions",
+  "description": "Railway server for Hacked ATM Token",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "keywords": [
-    "solana",
-    "token",
-    "webhook",
-    "railway"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.3.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "@solana/web3.js": "^1.96.0",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
-  "type": "module"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.2"
+  }
 }
